[package]
name = "murmur_grpc"
version = "0.8.5"
authors = ["chili-b"]
edition = "2018"
description = "Wrapper over Murmur's gRPC interface"
repository = "https://github.com/chili-b/murmur_grpc"
documentation = "https://docs.rs/murmur_grpc"
license = "MIT"
keywords = ["mumble", "murmur"]

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.7.0"
protobuf = "^2.0"
futures = "0.3.8"

[build-dependencies]
protoc-grpcio = "3.0.0"
