[package]
name = "murmur_grpc"
version = "2.0.5"
authors = ["chili-b"]
edition = "2018"
description = "Wrapper over Murmur's gRPC interface"
repository = "https://github.com/chili-b/murmur_grpc"
documentation = "https://docs.rs/murmur_grpc"
license = "MIT"
keywords = ["mumble", "murmur"]

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "^0.8"
protobuf = "^2.0"
futures = "^0.3"

[build-dependencies]
protoc-grpcio = "3.0.0"


[package.metadata.docs.rs]
rustdoc-args = ["--no-deps"]
